# fortran_demo

./: CMakeLists.txt  CMakePresets.json  README.md  SETUP.md
src/: int_sin.f90  test_int_sin.c  test_int_sin.f90
